# malgo-c2

./: .dockerignore  .env.example  .gitignore  README.md  Taskfile.yml  bun.lockb  docker-compose.yml  drizzle.config.ts  frontend.env.example  package-lock.json  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js
.github/workflows/: headless.yaml  playwright.yaml
.husky/: pre-commit
docker/grafana/datasources/: datasource.yml
docker/grafana/grafana_dashboards/: vm.json  vmagent.json
docker/victoriametrics/: prometheus.yml
documentation/: mkdocs.yml
documentation/docs/: architecture.md  development.md  index.md
documentation/docs/gateway/: overview.md
documentation/docs/operator/: overview.md  sveltekit.md  websocket.md
documentation/docs/redirectors/: dns.md
documentation/docs/technologies/: database.md  gateway.md  message-broker.md  operator.md  redirectors.md  websocket.md
documentation/docs/websocket/: overview.md
implants/malgo-rust/bin-fat/: Cargo.toml
implants/malgo-rust/bin-fat/dll/: Cargo.toml
implants/malgo-rust/bin-fat/dll/src/: lib.rs
implants/malgo-rust/bin-fat/src/: main.rs
implants/malgo-rust/bin-slim/: Cargo.toml  build.rs
implants/malgo-rust/bin-slim/dll/: Cargo.toml
implants/malgo-rust/bin-slim/dll/src/: lib.rs
implants/malgo-rust/bin-slim/src/: lib.rs  main.rs
implants/malgo-rust/bin-slim/src/essentials/: mod.rs
implants/malgo-rust/core/: Cargo.toml  build.rs
implants/malgo-rust/core/src/: lib.rs
implants/malgo-rust/core/src/command/: mod.rs
implants/malgo-rust/core/src/result/: mod.rs
implants/malgo-rust/core/src/session/: mod.rs
implants/malgo-rust/core/src/transport/: dns.rs  mod.rs
malgo-operator/: .prettierignore  Dockerfile  Taskfile.yml  bun.lockb  drizzle.Dockerfile  drizzle.config.ts  eslint.config.js  package.json  playwright.config.ts  svelte.config.js  tailwind.config.js  tsconfig.json
malgo-operator/migrations/: 0002_careful_sumo.sql  0003_tired_doctor_strange.sql  0004_silent_warpath.sql  0005_acoustic_killer_shrike.sql  0005_special_liz_osborn.sql  0006_lovely_dakota_north.sql  0006_shallow_ultron.sql
malgo-operator/migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0005_snapshot.json  0006_snapshot.json  _journal.json
malgo-operator/src/: app.d.ts  hooks.server.ts  main.css
malgo-operator/src/lib/: auth.server.ts  index.ts
malgo-operator/src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.svelte
malgo-websocket/: go.mod  go.sum
malgo-websocket/cmd/server/: main.go
malgo-websocket/docker/prometheus/: prometheus.yml
malgo-websocket/internal/db/: command_repository.go  session_repository.go
malgo-websocket/internal/ws/: handler.go  (+12 more)
migrations/: 0000_awesome_nightmare.sql  0000_fixed_imperial_guard.sql  0000_graceful_klaw.sql  0001_chilly_butterfly.sql  0005_lush_pepper_potts.sql
migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  _journal.json
services/: Taskfile.yml  gateway.Dockerfile  go.mod  go.sum  websocket.Dockerfile
services/malgo-gateway/: .env.example  Dockerfile
services/malgo-redirector/: .env.example  server.crt  server.key
services/malgo-websocket/: .env.example  Dockerfile  docker-compose.yml
src/: hooks.server.ts  main.css
src/lib/: auth.server.ts  index.ts  validationSchemas.ts
src/routes/: +error.svelte  +layout.server.ts  +layout.svelte
(+296 files in other folders)
