workspace = { members = ["dll"] }
[package]
name = "bin-fat"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "symbols"
opt-level = "z"
lto = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
malgo-rust = {path = "../core"}
powershell_script = "1.1.0"
