[package]
name = "malgo-rust"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true
strip = "symbols"
opt-level = "z"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
