[package]
name = "malgo-rust"
version = "0.1.0"
edition = "2021"

[profile.dev]
panic = "abort"
lto = true

[profile.release]
panic = "abort"
lto = true
strip = "symbols"
opt-level = "z"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
hickory-resolver = "0.24.1"
base64 = "0.22.1"
serde_json = "1.0.117"
serde = { version = "1.0.201", features = ["derive"] }
