[package]
name = "malgo-rust"
version = "0.1.0"
edition = "2021"

[profile.dev]
lto = true

[profile.release]
lto = true
strip = "symbols"
opt-level = "z"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
base64 = "0.22.1"
serde_json = "1.0.117"
serde = { version = "1.0.201", features = ["derive"] }
widestring = "1.1.0"

[dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32",
    "Win32_Foundation",
    "Win32_NetworkManagement",
    "Win32_NetworkManagement_Dns",
    "Win32_Networking",
    "Win32_Networking_WinSock"
]
