[package]
name = "dll"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "bin_slim"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bin-slim = { path = "../." }

[dependencies.windows-sys]
version = "0.52.0"
features = [
    "Win32",
    "Win32_Foundation",
    "Win32_System",
    "Win32_System_SystemServices",
    "Win32_UI",
    "Win32_UI_WindowsAndMessaging"
]